testing/macro-tests/tests/ui/insert_type_excludes_managed_field.stderr
error[E0560]: struct `UiEntityInsert` has no field named `created_at`
  --> tests/ui/insert_type_excludes_managed_field.rs:27:9
   |
27 |         created_at: Some(Timestamp::now()),
   |         ^^^^^^^^^^ `UiEntityInsert` does not have this field
   |
   = note: all struct fields are already assigned
